Add unsubscribe api and finish API_doc
