# main.go
@@ -13,6 +13,7 @@ func main() {
 	r.POST("/cm_controller/v1/run/:name", runHandler)
 	r.POST("/cm_controller/v1/checkpoint/:name", checkpointHandler)
 	r.POST("/cm_controller/v1/subscribe", subscribeHandler)
+	r.POST("/cm_controller/v1/unsubscribe/:name", unsubscribeHandler)
 	r.POST("/cm_controller/v1/start", startHandler)
 	r.POST("/cm_controller/v1/stop/:name", stopHandler)
 	r.DELETE("/cm_controller/v1/remove/:name", removeHandler)
